--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    body {
+        height: 100vh;
+        font-size: 15px;
+        font-family: 'Inter', sans-serif;
+    }
+    
+    button {
+        border: none;
+        background-color: transparent;
+        font-size: 0.85rem;
+        cursor: pointer;
+    }
+    
+    input,
+    textarea {
+        width: 100%;
+        font: inherit;
+        padding: 10px;
+        border: 1px solid gray;
+    }
+    
+    input:focus,
+    textarea:focus {
+        border: none;
+    }
+    
+    .container {
+        display: flex;
+    }
+    
+    .sidebar {
+        width: 30%;
+        height: 100vh;
+        border-right: 1px solid gray;
+    }
+    
+    .sidebar .header {
+        display: flex;
+        justify-content: space-between;
+        padding: 1.25rem 1rem;
+    }
+    
+    .sidebar .header button {
+        color: rgb(37, 119, 185);
+    }
+    
+    .sidebar .note {
+        padding: 1rem;
+    }
+    
+    .sidebar .note:hover {
+        background-color: whitesmoke;
+    }
+    
+    .sidebar .note .note-title {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .sidebar .note .note-title button {
+        color: rgb(165, 17, 17);
+    }
+    
+    .sidebar .note .note-preview {
+        margin-block: 5px;
+    }
+    
+    .sidebar .note small {
+        color: gray;
+    }
+    
+    .main {
+        width: 70%;
+        height: 100vh;
+    }
+    
+    .main .edit {
+        padding: 1.25rem 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        height: 50vh;
+    }
+    
+    .main .edit #title {
+        font-size: 1.25rem;
+        font-weight: bold;
+    }
+    
+    .main .edit #body {
+        height: 100%;
+        resize: none;
+    }
+    
+    .main .preview {
+        padding: 1.25rem 1rem;
+        border-top: 1px solid gray;
+        background-color: whitesmoke;
+        height: 50vh;
+    }
+    
+    .main .preview p {
+        margin-top: 10px;
+        padding-inline: .2rem;
+    }
+    
+    .no-note {
+        align-self: center;
+        text-align: center;
+        width: 100%;
+        color: gray;
+    }
